tried fixing a bug with converting String to RoleDTO object

--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -86,10 +86,10 @@
                                                 <div class="form-group">
                                                     <label>Gender</label><br>
                                                     <label class="custom-control custom-radio custom-control-inline">
-                                                        <input type="radio" name="radio-inline" class="custom-control-input" th:field="*{gender}" th:value="Male"><span class="custom-control-label">Male</span>
+                                                        <input type="radio" name="radio-inline" class="custom-control-input" th:field="*{gender}" th:value="MALE"><span class="custom-control-label">Male</span>
                                                     </label>
                                                     <label class="custom-control custom-radio custom-control-inline">
-                                                        <input type="radio" name="radio-inline" class="custom-control-input" th:field="*{gender}" th:value="Female"><span class="custom-control-label">Female</span>
+                                                        <input type="radio" name="radio-inline" class="custom-control-input" th:field="*{gender}" th:value="FEMALE"><span class="custom-control-label">Female</span>
                                                     </label>
 
                                                 </div>
@@ -98,9 +98,9 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label>Choose a Role</label>
-                                                    <select name="role" th:field="*{role}" class="custom-select">
+                                                    <select th:field="*{role}" class="custom-select">
                                                         <option th:value="''" th:text="Select"></option>
-                                                        <option th:each="role: ${roles}"th:value="${role}" th:text="${role.description}"></option>
+                                                        <option th:each="role: ${roles}" th:value="${role.id}" th:text="${role.description}"></option>
 
                                                     </select>
                                                 </div>
