--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -32,14 +32,14 @@
                                 <div class="panel-body">
 
                                     <!-- ------------------------FORM START----------------------------- -->
-                                    <form action="#">
+                                    <form th:action="@{/task/create}" th:object="${task}" >
 
                                         <div class="row">
                                             <div class="col">
                                                 <div class="form-group">
                                                     <label>Project</label>
-                                                    <select name="project" class="custom-select">
-                                                        <option></option>
+                                                    <select name="project"  th:field="*{projectDTO}" class="custom-select">
+                                                        <option th:each="project:${projects}" th:text="${project.projectName}"></option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -49,8 +49,8 @@
                                             <div class="col">
                                                 <div class="form-group">
                                                     <label>Assigned Employee</label>
-                                                    <select name="assignedemployee" class="custom-select">
-                                                        <option></option>
+                                                    <select th:field="*{userDTO}" name="assignedemployee" class="custom-select">
+                                                        <option th:each="assignedEmployee: ${employees}" th:text="${assignedEmployee.firstName +' '+ assignedEmployee.lastName}"></option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -60,7 +60,7 @@
                                             <div class="col">
                                                 <div class="form-group">
                                                     <label for="tasksubject" class="col-form-label">Task Subject</label>
-                                                    <input id="tasksubject" type="text" class="form-control"
+                                                    <input id="tasksubject" th:field="*{taskSubject}" type="text" class="form-control"
                                                            placeholder="task subject">
                                                 </div>
                                             </div>
@@ -70,8 +70,7 @@
                                             <div class="col">
                                                 <div class="form-group">
                                                     <label for="taskdetail">Task Detail</label>
-                                                    <textarea id="taskdetail" class="form-control"
-                                                              placeholder="task detail"></textarea>
+                                                    <textarea id="taskdetail" class="form-control" th:field="*{taskDetail}" placeholder="task detail"></textarea>
                                                 </div>
                                             </div>
                                         </div>
@@ -123,12 +122,12 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <tr>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
+                                            <tr th:each="task:${tasks}">
+                                                <td th:text="${task.projectDTO.projectName}"></td>
+                                                <td th:text="${task.taskSubject}"></td>
+                                                <td th:text="${task.userDTO.firstName +' '+ task.userDTO.lastName}"></td>
+                                                <td th:text="${#temporals.format(task.assignedDate, 'MM.dd.yyyy')}"></td>
+                                                <td th:text="${task.taskStatus.value}"></td>
                                                 <td class="actions">
                                                     <a href="#" class="btn btn-warning rounded-0">Update</a>
                                                     <a href="#" class="btn btn-danger rounded-0">Delete</a>
