implementing employee tasl update

--- a/src/main/resources/templates/task/status-update.html
+++ b/src/main/resources/templates/task/status-update.html
@@ -30,14 +30,20 @@
                                 </header>
                                 <div class="panel-body">
                                     <!-- ------------------------FORM START----------------------------- -->
-                                    <form>
+                                    <form th:object="${task}" th:action="@{/task/employee/update/{id}(id=${task.id})}" method="post">
                                         <div class="row">
                                             <div class="col-sm-6 col-md-6 col-xs-12">
                                                 <div class="form-group">
                                                     <label>Project</label>
-                                                    <select name="project" class="custom-select" disabled>
-                                                        <option></option>
+                                                    <select th:field="*{projectDTO}" name="project" class="custom-select" disabled>
+                                                        <option th:value="*{projectDTO.projectCode}" th:text="${task.projectDTO.projectCode + '-'+
+                                                        task.projectDTO.projectName}"></option>
                                                     </select>
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('projectDTO')}">
+                                                        <ul>
+                                                            <li th:each="err:${#fields.errors('projectDTO')}" th:text="${err}"> </li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -45,9 +51,15 @@
                                             <div class="col-sm-6 col-md-6 col-xs-12">
                                                 <div class="form-group">
                                                     <label>Assigned Employee</label>
-                                                    <select name="assignedemployee" class="custom-select" disabled>
-                                                        <option></option>
+                                                    <select th:field="*{userDTO}" name="assignedemployee" class="custom-select" disabled>
+                                                        <option th:value="${task.userDTO.userName}" th:text="${task.userDTO.firstName
+                                                        +' '+task.userDTO.lastName}"></option>
                                                     </select>
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('userDTO')}">
+                                                        <ul>
+                                                            <li th:each="err:${#fields.errors('userDTO')}" th:text="${err}"> </li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -57,8 +69,13 @@
                                                     <div class="col-sm-12 col-md-12 col-xs-12">
                                                         <div class="form-group">
                                                             <label for="tasksubject">Task Subject</label>
-                                                            <input id="tasksubject" type="text" class="form-control"
+                                                            <input th:field="*{taskSubject}" id="tasksubject" type="text" class="form-control"
                                                                    aria-describedby="inputGroupPrepend" disabled/>
+                                                            <div class="invalid-feedback" th:if="${#fields.hasErrors('taskSubject')}">
+                                                                <ul>
+                                                                    <li th:each="err:${#fields.errors('taskSubject')}" th:text="${err}"> </li>
+                                                                </ul>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -70,9 +87,14 @@
                                                     <div class="col-sm-12 col-md-12 col-xs-12">
                                                         <div class="form-group">
                                                             <label>Task Detail</label>
-                                                            <textarea id="taskdetail" class="form-control" rows="3"
+                                                            <textarea th:field="*{taskDetail}" id="taskdetail" class="form-control" rows="3"
                                                                       aria-describedby="inputGroupPrepend"
                                                                       disabled></textarea>
+                                                            <div class="invalid-feedback" th:if="${#fields.hasErrors('taskDetail')}">
+                                                                <ul>
+                                                                    <li th:each="err:${#fields.errors('taskDetail')}" th:text="${err}"> </li>
+                                                                </ul>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -82,9 +104,14 @@
                                             <div class="col-sm-6 col-md-6 col-xs-12">
                                                 <div class="form-group">
                                                     <label>Status</label>
-                                                    <select name="taskStatus" class="custom-select">
-                                                        <option></option>
+                                                    <select th:field="*{taskStatus}" name="taskStatus" class="custom-select">
+                                                        <option th:each="status:${statuses}" th:value="${status}" th:text="${status.value}"></option>
                                                     </select>
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('taskStatus')}">
+                                                        <ul>
+                                                            <li th:each="err:${#fields.errors('taskStatus')}" th:text="${err}"> </li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -125,14 +152,14 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <tr>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
+                                            <tr th:each="task:${tasks}">
+                                                <td th:text="${task.projectDTO.projectCode + '-'+ task.projectDTO.projectName}"></td>
+                                                <td th:text="${task.taskSubject}"></td>
+                                                <td th:text="${task.userDTO.firstName +' '+ task.userDTO.lastName}"></td>
+                                                <td th:text="${task.assignedDate}"></td>
+                                                <td th:text="${task.taskStatus.value}"></td>
                                                 <td>
-                                                    <a href="#" class="btn btn-warning rounded-0">Update</a>
+                                                    <a th:href="@{/task/employee/eidt/{id}(id=${task.id})}" class="btn btn-warning rounded-0">Update</a>
                                                 </td>
                                             </tr>
                                             </tbody>
